--- a/ex1/index.html
+++ b/ex1/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div id="container">
-      <h1>O que eu mais gosto em São Paulo</h1>
-
+      <h1><a href="">O que eu mais gosto em São Paulo</a></h1>
       <div class="place">
           <h2>Passear na Avenida Paulista!</h2>
+          <img src="https://th.bing.com/th/id/OIP.lTRDdtaIe9Yd4YjDlP1KCQHaE8?rs=1&pid=ImgDetMain" alt="avenida paulista">
           <p>
             Um dos principais centros financeiros da cidade, a avenida Paulista
             também possui diversas opções de entretenimento. Endereço do Museu de
@@ -27,6 +27,8 @@
 
       <div class="place">
           <h2>Os bares da Vila Madalena</h2>
+        
+          <img src="https://live.staticflickr.com/8426/7654163684_ecdda0315a_b.jpg" alt="vila madalena">
           <p>
             Depois de um dia de trabalho, nada melhor do que um bom chopp, um
             petisco e uma conversa em uma mesa de bar. Opções de sobra na região das
@@ -40,6 +42,7 @@
 
       <div class="place">
           <h2>O Parque do Ibirapuera</h2>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Lago_do_Parque_do_Ibirapuera.JPG/1200px-Lago_do_Parque_do_Ibirapuera.JPG" alt="">
           <p>
             Um dos cartões postais da cidade, o parque dispõe de mais de 1,5 km{^2}
             de área verde, lagos artificiais e pistas de cooper e ciclismo. E se
@@ -47,6 +50,9 @@
             eventos culturais ao longo do ano.
           </p>
           <p>Veja no <a href="#" target="_blank">mapa</a> como chegar ao parque.</p>
+      </div>
+      <div class="footer">
+        <p>Parte do lirvo '</p>
       </div>
     </div>
   </body>
