--- a/ex1/index.html
+++ b/ex1/index.html
@@ -51,8 +51,19 @@
           </p>
           <p>Veja no <a href="#" target="_blank">mapa</a> como chegar ao parque.</p>
       </div>
+      <div class="sidenote">
+        <h3>E existem muitos outros lugares interessantes na cidade...</h3>
+        <ol>
+          <li>O Mercado Municipal.</li>
+          <li>A Sala São Paulo.</li>
+          <li>Os estádios dos principais times de futebol da cidade.</li>
+          <li>Diversos museus, como o Memorial da América Latina, Museu da
+            Língua Portuguesa e o Museu do Ipiranga.</li>
+          <li>E mais!</li>
+        </ol>
+      </div>
       <div class="footer">
-        <p>Parte do lirvo '</p>
+        <p>Parte do livro "HTML5 e CSS3: Domine a web do futuro."</p>
       </div>
     </div>
   </body>
