--- a/ex1/index.html
+++ b/ex1/index.html
@@ -7,64 +7,65 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="container">
-      <h1><a href="">O que eu mais gosto em São Paulo</a></h1>
-      <div class="place">
-          <h2>Passear na Avenida Paulista!</h2>
-          <img src="https://th.bing.com/th/id/OIP.lTRDdtaIe9Yd4YjDlP1KCQHaE8?rs=1&pid=ImgDetMain" alt="avenida paulista">
-          <p>
-            Um dos principais centros financeiros da cidade, a avenida Paulista
-            também possui diversas opções de entretenimento. Endereço do Museu de
-            Arte de São Paulo, <em>MASP</em>, do Teatro Gazeta e muitos outros, a
-            região é de fácil acesso graças as diversas linhas de ônibus que cruzam
-            a avenida e a linha de metrô que passa por baixo dela.
-          </p>
-          <p>
-            A Avenida Paulista sempre é assunto. O que será que estão falando a
-            respeito no <a href="#" target="_blank">Twitter</a>?
-          </p>
-      </div>
-
-      <div class="place">
-          <h2>Os bares da Vila Madalena</h2>
+    
+      <div id="container">
+        <div class="places">
+          <h1><a href="">O que eu mais gosto em São Paulo</a></h1>
+          <div class="place">
+              <h2>Passear na Avenida Paulista!</h2>
+              <img src="https://th.bing.com/th/id/OIP.lTRDdtaIe9Yd4YjDlP1KCQHaE8?rs=1&pid=ImgDetMain" alt="avenida paulista">
+              <p>
+                Um dos principais centros financeiros da cidade, a avenida Paulista
+                também possui diversas opções de entretenimento. Endereço do Museu de
+                Arte de São Paulo, <em>MASP</em>, do Teatro Gazeta e muitos outros, a
+                região é de fácil acesso graças as diversas linhas de ônibus que cruzam
+                a avenida e a linha de metrô que passa por baixo dela.
+              </p>
+              <p>
+                A Avenida Paulista sempre é assunto. O que será que estão falando a
+                respeito no <a href="#" target="_blank">Twitter</a>?
+              </p>
+          </div>
+          <div class="place">
+              <h2>Os bares da Vila Madalena</h2>
         
-          <img src="https://live.staticflickr.com/8426/7654163684_ecdda0315a_b.jpg" alt="vila madalena">
-          <p>
-            Depois de um dia de trabalho, nada melhor do que um bom chopp, um
-            petisco e uma conversa em uma mesa de bar. Opções de sobra na região das
-            ruas Aspicuelta, Fradique Coutinho e Wisard.
-          </p>
-          <p>
-            Veja quais os melhores bares e restaurantes da região no
-            <a href="#" target="_blank">Guia da VEJA São Paulo. </a>
-          </p>
+              <img src="https://live.staticflickr.com/8426/7654163684_ecdda0315a_b.jpg" alt="vila madalena">
+              <p>
+                Depois de um dia de trabalho, nada melhor do que um bom chopp, um
+                petisco e uma conversa em uma mesa de bar. Opções de sobra na região das
+                ruas Aspicuelta, Fradique Coutinho e Wisard.
+              </p>
+              <p>
+                Veja quais os melhores bares e restaurantes da região no
+                <a href="#" target="_blank">Guia da VEJA São Paulo. </a>
+              </p>
+          </div>
+          <div class="place">
+              <h2>O Parque do Ibirapuera</h2>
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Lago_do_Parque_do_Ibirapuera.JPG/1200px-Lago_do_Parque_do_Ibirapuera.JPG" alt="">
+              <p>
+                Um dos cartões postais da cidade, o parque dispõe de mais de 1,5 km{^2}
+                de área verde, lagos artificiais e pistas de cooper e ciclismo. E se
+                isso não fosse o suficiente, o parque costuma ser palco de diversos
+                eventos culturais ao longo do ano.
+              </p>
+              <p>Veja no <a href="#" target="_blank">mapa</a> como chegar ao parque.</p>
+          </div>
+        </div>
+        <div class="sidenote">
+          <h3>E existem muitos outros lugares interessantes na cidade...</h3>
+          <ol>
+            <li>O Mercado Municipal.</li>
+            <li>A Sala São Paulo.</li>
+            <li>Os estádios dos principais times de futebol da cidade.</li>
+            <li>Diversos museus, como o Memorial da América Latina, Museu da
+              Língua Portuguesa e o Museu do Ipiranga.</li>
+            <li>E mais!</li>
+          </ol>
+        </div>
       </div>
-
-      <div class="place">
-          <h2>O Parque do Ibirapuera</h2>
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Lago_do_Parque_do_Ibirapuera.JPG/1200px-Lago_do_Parque_do_Ibirapuera.JPG" alt="">
-          <p>
-            Um dos cartões postais da cidade, o parque dispõe de mais de 1,5 km{^2}
-            de área verde, lagos artificiais e pistas de cooper e ciclismo. E se
-            isso não fosse o suficiente, o parque costuma ser palco de diversos
-            eventos culturais ao longo do ano.
-          </p>
-          <p>Veja no <a href="#" target="_blank">mapa</a> como chegar ao parque.</p>
-      </div>
-      <div class="sidenote">
-        <h3>E existem muitos outros lugares interessantes na cidade...</h3>
-        <ol>
-          <li>O Mercado Municipal.</li>
-          <li>A Sala São Paulo.</li>
-          <li>Os estádios dos principais times de futebol da cidade.</li>
-          <li>Diversos museus, como o Memorial da América Latina, Museu da
-            Língua Portuguesa e o Museu do Ipiranga.</li>
-          <li>E mais!</li>
-        </ol>
-      </div>
-      <div class="footer">
+      <div class="footer clear">
         <p>Parte do livro "HTML5 e CSS3: Domine a web do futuro."</p>
       </div>
-    </div>
   </body>
 </html>
