--- a/ex1/index.html
+++ b/ex1/index.html
@@ -11,7 +11,7 @@
       <div id="container">
         <div class="places">
           <h1><a href="">O que eu mais gosto em São Paulo</a></h1>
-          <div class="place">
+          <article class="place">
               <h2>Passear na Avenida Paulista!</h2>
               <img src="https://th.bing.com/th/id/OIP.lTRDdtaIe9Yd4YjDlP1KCQHaE8?rs=1&pid=ImgDetMain" alt="avenida paulista">
               <p>
@@ -25,8 +25,8 @@
                 A Avenida Paulista sempre é assunto. O que será que estão falando a
                 respeito no <a href="#" target="_blank">Twitter</a>?
               </p>
-          </div>
-          <div class="place">
+          </article>
+          <article class="place">
               <h2>Os bares da Vila Madalena</h2>
         
               <img src="https://live.staticflickr.com/8426/7654163684_ecdda0315a_b.jpg" alt="vila madalena">
@@ -39,8 +39,8 @@
                 Veja quais os melhores bares e restaurantes da região no
                 <a href="#" target="_blank">Guia da VEJA São Paulo. </a>
               </p>
-          </div>
-          <div class="place">
+          </article>
+          <article class="place">
               <h2>O Parque do Ibirapuera</h2>
               <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Lago_do_Parque_do_Ibirapuera.JPG/1200px-Lago_do_Parque_do_Ibirapuera.JPG" alt="">
               <p>
@@ -50,9 +50,9 @@
                 eventos culturais ao longo do ano.
               </p>
               <p>Veja no <a href="#" target="_blank">mapa</a> como chegar ao parque.</p>
-          </div>
+          </article>
         </div>
-        <div class="sidenote">
+        <aside>
           <h3>E existem muitos outros lugares interessantes na cidade...</h3>
           <ol>
             <li>O Mercado Municipal.</li>
@@ -62,10 +62,10 @@
               Língua Portuguesa e o Museu do Ipiranga.</li>
             <li>E mais!</li>
           </ol>
-        </div>
+        </aside>
       </div>
-      <div class="footer clear">
+      <footer class="clear">
         <p>Parte do livro "HTML5 e CSS3: Domine a web do futuro."</p>
-      </div>
+      </footer>
   </body>
 </html>
